# pre-commit-hooks

./: .dockerignore  .gitignore  .npmignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .versionrc.json  CHANGELOG.md  CICD_ASSESSMENT.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  README.md  SECURITY.md  TODO.md  package.json  pyproject.toml  setup.py
.claude/: CLAUDE.md  HOOK_RULES.md
.claude/docs/: commit_hooks.md  docs_hooks.md  index.md  nix_hooks.md  project.md  rust_hooks.md  security_hooks.md  terraform_hooks.md
.github/: branch-protection.md  dependabot.yml
.github/workflows/: ci.yml  coverage.yml  publish-pypi.yml  release.yml  security.yml
.todo/: README.md
docker/: op-ggshield-img.dockerfile
docs/: HOOK_DEVELOPMENT.md  RELEASE_AUTOMATION.md
hooks/: INDEX.md  backup-nixos.sh  pluralith.sh  update-vm.sh  witness.sh
hooks/cargo/foo/: Cargo.toml
hooks/ci/: github.sh
hooks/commits/: commitizen.sh  commitlint.sh  gitlint.sh
hooks/configs/: yamlfmt.sh
hooks/docs/: dead-links.sh
hooks/nix/: attestation.nix  nix-build.nix  nix-build.sh  nix-darwin-check.sh  publish-to-nixpkgs.sh
hooks/python/validate-frontmatter/: __init__.py
hooks/shell/: commitizen.sh  csslint.sh  fixmyjs.sh  jshint.sh  nix-build-check.sh  nix-build.sh  nix-flake-check.sh  nix-fmt.sh  nix-home-manager-check.sh  nix-lint.sh  publish-to-nixpkgs.sh  scss-lint.sh  update-vm.sh  witness.sh
hooks/terraform/: pluralith.sh  tfupdate.sh
hooks/web/css/: csslint.sh
hooks/web/js/: eslint.sh  fixmyjs.sh
hooks/web/scss/: scss-lint.sh
nix/: nix-build.nix
scripts/: update-setup-py.js
tests/: README.md  run_tests.sh  test_ci_basic.bats  test_helper.bash
tests/ci/: test_github.bats
tests/commits/: test_gitlint.bats
tests/nix/: test_nix_build.bats  test_nix_fmt.bats
tests/nix/fixtures/: default.nix  unformatted.nix  valid-flake.nix
tests/web/: test_eslint.bats
