[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "arustydev-pre-commit-hooks"
authors = [
    {name = "aRustyDev"},
]
description = "Collection of pre-commit hooks for various languages and tools"
readme = "README.md"
requires-python = ">=3.6"
keywords = ["pre-commit", "hooks", "git", "linting", "formatting"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pre-commit>=2.0.0",
    "pyyaml>=5.0",
]
dynamic = ["version"]

[project.scripts]
validate-frontmatter = "pre_commit_hooks.validate_frontmatter:main"

[project.urls]
Homepage = "https://github.com/aRustyDev/pre-commit-hooks"
Documentation = "https://github.com/aRustyDev/pre-commit-hooks#readme"
Repository = "https://github.com/aRustyDev/pre-commit-hooks.git"
Issues = "https://github.com/aRustyDev/pre-commit-hooks/issues"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "flake8>=4.0",
]

[tool.setuptools]
packages = ["pre_commit_hooks"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["hooks/**/*.sh", "hooks/**/*.nix", ".pre-commit-hooks.yaml"]

[tool.setuptools_scm]
version_file = "VERSION"
local_scheme = "no-local-version"
